# mallardb

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  Makefile  README.md  compose.yml  deny.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/rfc/: 00-abstract.md  01-introduction.md  02-terminology.md  03-architecture.md  04-wire-protocol.md  05-authentication.md  06-catalog.md  07-query-execution.md  08-type-system.md  09-transactions.md  10-configuration.md  11-security.md  12-references.md  README.md
docs/rfc/features/: jobs.md
examples/jobs-scheduler/: README.md  compose.yml
examples/jobs-scheduler/jobs/data_cleanup/: 01_cleanup_metrics.sql  02_cleanup_job_runs.sql  job.toml
examples/jobs-scheduler/jobs/metrics_collector/: 01_ensure_table.sql  02_collect.sql  job.toml
src/: auth.rs  backend.rs  catalog.rs  config.rs  error.rs  handler.rs  lib.rs  main.rs  query_parser.rs  sql_rewriter.rs  types.rs
src/jobs/: catalog.rs  config.rs  executor.rs  mod.rs  queue.rs  registry.rs  watcher.rs
tests/: integration_test.rs
