[package]
name = "mallardb"
version = "0.3.1"
edition = "2024"

[[bin]]
name = "mallardb"
path = "src/main.rs"

[dependencies]
# DuckDB
duckdb = { version = "1.4.3", features = ["bundled", "extensions-full", "modern-full"] }

# PostgreSQL wire protocol
pgwire = { version = "0.37.0", features = ["pg-type-rust-decimal", "pg-type-chrono"] }
rust_decimal = "1.37"

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"
bytes = "1.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }

# Cryptographic utilities for auth
md5 = "0.7"
rand = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = "0.4"

# Hex encoding
hex = "0.4"

# Job scheduler
notify = "8.2"
cron = "0.13"
toml = "0.9"
humantime = "2.3"
regex = "1"
uuid = { version = "1", features = ["v4"] }

# TLS support
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

# SQL parsing for robust query rewriting
sqlparser = { version = "0.60", features = ["visitor"] }

# Arrow (re-exported from duckdb but needed for enum handling)
arrow = { version = "54", default-features = false }

[dev-dependencies]
# Testing utilities
tempfile = "3.20"
tokio-test = "0.4"

# Postgres client for integration tests
tokio-postgres = "0.7"

# Test assertions
pretty_assertions = "1.4"

# Load .env for integration tests (re-use from main deps)
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
